apps/base/byparr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: byparr
  labels:
    app.kubernetes.io/name: byparr
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
