apps/base/byparr/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: byparr
  namespace: byparr
  labels:
    app.kubernetes.io/name: byparr
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8191
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: byparr
  policyTypes:
    - Ingress
