apps/base/byparr/resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: byparr
  labels:
    app.kubernetes.io/name: byparr
    gateway.excloo.dev/private-access: "true"
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: byparr
  namespace: byparr
  labels:
    app.kubernetes.io/name: byparr
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: shelfmark
          podSelector:
            matchLabels:
              app.kubernetes.io/name: shelfmark
      ports:
        - port: 8191
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/name: byparr
  policyTypes:
    - Ingress
